manifest/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32002
      protocol: TCP
  selector:
    app: wordpress
