manifest/wordpress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress  
spec:
  rules:
  - host: demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
